--- a/src/main/resources/templates/book/list.html
+++ b/src/main/resources/templates/book/list.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+      lang="en">
 <head>
     <meta charset="UTF-8">
     <title>My Book List</title>
-    <th:block th:replace="layout :: link-css"></th:block>
+    <th:block th:replace="~{layout :: link-css}"></th:block>
 </head>
 <body>
-<th:block th:replace="layout :: header"></th:block>
+<th:block th:replace="~{layout :: header}"></th:block>
 <div class="container">
   <h1 th:text="${title}"></h1>
   <table class="table">
@@ -16,7 +18,7 @@
       <th>Author</th>
       <th>Price</th>
       <th>Category</th>
-      <th>Action</th>
+      <th sec:authorize="hasAnyAuthority('ADMIN')">Action</th>
     </tr>
     <tr th:each="book : ${books}">
       <td th:text="${book.id}"></td>
@@ -24,7 +26,12 @@
       <td th:text="${book.author}"></td>
       <td th:text="${book.price}"></td>
       <td th:text="${book.category.name}"></td>
-      <td>
+<!--      <td th:text="${book.category != null ? book.category.name : 'N/A'}"></td>-->
+
+      <td sec:authorize="hasAnyAuthority('ADMIN')">
+<!--        <a th:href="@{/books/edit(id=_${book.id}_)}" class="text-info">Edit</a>-->
+<!--        <a th:href="@{/books/delete(id=_${book.id}_})"-->
+<!--           onclick="deleteBook(this); return false;" class="text-danger">Delete</a>-->
         <a th:href="@{/books/edit/{id}(id=${book.id})}">Edit</a>
         <a th:href="@{/books/delete/{id}(id=${book.id})}"
            onclick="return confirm('Are you sure ?')">Delete</a>
@@ -32,6 +39,27 @@
     </tr>
   </table>
 </div>
+
+<script th:src="@{/js/jquery-3.5.1.min.js}"></script>
+<script th:inline="javascript">
+  function deleteBook(link){
+    if(confirm('Are you sure?')){
+    $.ajax({
+      url: $(link).attr('href'),
+      type: 'DELETE',
+      success: result => {
+        if (!result.success){
+          alert(result.message);
+        } else{
+          $(link).parent().parent().remove();
+        }
+      }
+    })
+    }
+  }
+</script>
+
 <th:block th:replace="layout :: footer"></th:block>
 </body>
 </html>
+
